added viewPager and couple views

--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -5,6 +5,10 @@ container
     alignItems: center
     backgroundColor: #F5FCFF
 
+mainContainer
+    flex: 1
+    backgroundColor: white
+
 rightContainer
     flex: 1
 
@@ -23,3 +27,26 @@ year
 listView
     paddingTop: 20
     backgroundColor: #F5FCFF
+
+buttons
+    flexDirection: row
+    height: 60
+    backgroundColor: black
+    alignItems: center
+    justifyContent: space-between
+
+button
+    flex: 1
+    width: 0
+    margin: 5
+    borderColor: gray
+    borderWidth: 1
+    backgroundColor: gray
+
+image
+    width: 30
+    height: 20
+    padding: 0
+
+viewPager
+    flex: 1
